syntax = "proto3";

package greet;

option csharp_namespace = "GrpcGreeter";


message HelloRequest {
  string text = 1;
}

message HelloReply {
  string text = 1;
}