syntax = "proto3";

package greet;

option csharp_namespace = "GrpcGreeter";

message TimeRequest {
  uint32 hour = 1;
  uint32 minute = 2;
  uint32 second = 3;
}

message TimeReply {
  uint32 hour = 1;
  uint32 minute = 2;
  uint32 second = 3;
}